# Leitor-Faturas-Equatorial

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: leitor.py
