[project]
name = "leitor-faturas-equatorial"
version = "0.1.0"
description = "Leitor open source de faturas de energia da Equatorial."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.18.2",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pypdf>=6.1.1",
]
